--- a/notebooks/assistant-01.ipynb
+++ b/notebooks/assistant-01.ipynb
@@ -1,15 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Assistant-01\n",
+    "\n",
+    "## The OpenAI reference demo\n",
+    "\n",
+    "### Get an OpenAI client"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<openai.lib.azure.AzureOpenAI object at 0x7f409e9ce680>\n"
+      "<openai.lib.azure.AzureOpenAI object at 0x7f4057bae980>\n"
      ]
     }
    ],
@@ -21,8 +32,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note:** The API version, the model version, and endpoint matter.\n",
+    "\n",
+    "### Create an assistant"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,17 +55,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a thread"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Thread(id='thread_U9MwwALVdTtNb6ZfSyXACa8Q', created_at=1705033021, metadata={}, object='thread')"
+       "Thread(id='thread_wEEkhDtTWJOwmb63SQEb8IgA', created_at=1705033553, metadata={}, object='thread')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,17 +83,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a user message"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ThreadMessage(id='msg_FbtLdYLEfttRVxUBebtf1TL9', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='I need to solve the equation `3x + 11 = 14`. Can you help me?'), type='text')], created_at=1705033024, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_U9MwwALVdTtNb6ZfSyXACa8Q')"
+       "ThreadMessage(id='msg_sJxIPugIIRgkKE2KQCmokreM', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='I need to solve the equation `3x + 11 = 14`. Can you help me?'), type='text')], created_at=1705033554, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_wEEkhDtTWJOwmb63SQEb8IgA')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,8 +115,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run the assistant in a thread"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,17 +135,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieve the run"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Run(id='run_jzMvpmuDZ7N6cp3g3rSQzjfj', assistant_id='asst_vjEEATln0nSomn1VzE8y8P4a', cancelled_at=None, completed_at=None, created_at=1705033027, expires_at=1705033627, failed_at=None, file_ids=[], instructions='Please address the user as Jane Doe. The user has a premium account.', last_error=None, metadata={}, model='gpt-4-turbo-test', object='thread.run', required_action=None, started_at=1705033027, status='in_progress', thread_id='thread_U9MwwALVdTtNb6ZfSyXACa8Q', tools=[ToolAssistantToolsCode(type='code_interpreter')])"
+       "Run(id='run_SzQXm4lGtaQqj7ZeUwYFVLKY', assistant_id='asst_hYxH4avXjvyst98J89Yq4IQ3', cancelled_at=None, completed_at=None, created_at=1705033554, expires_at=1705034154, failed_at=None, file_ids=[], instructions='Please address the user as Jane Doe. The user has a premium account.', last_error=None, metadata={}, model='gpt-4-turbo-test', object='thread.run', required_action=None, started_at=None, status='queued', thread_id='thread_wEEkhDtTWJOwmb63SQEb8IgA', tools=[ToolAssistantToolsCode(type='code_interpreter')])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,15 +166,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get and print the messages"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "assistant The solution to the equation \\(3x + 11 = 14\\) is \\(x = 1\\).\n",
       "user I need to solve the equation `3x + 11 = 14`. Can you help me?\n"
      ]
     }
@@ -144,14 +198,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### List all running assistants in the model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Assistant(id='asst_hYxH4avXjvyst98J89Yq4IQ3', created_at=1705033553, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_vjEEATln0nSomn1VzE8y8P4a', created_at=1705033018, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_PAWDmOO0941frce6sZQdTaE7', created_at=1705031991, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_nBwmy53mhSnpwFyMuPWLpUk9', created_at=1705031920, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
