Added a while loop until processing is completed.

--- a/notebooks/assistant-01.ipynb
+++ b/notebooks/assistant-01.ipynb
@@ -13,19 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<openai.lib.azure.AzureOpenAI object at 0x7f4057bae980>\n"
+      "<openai.lib.azure.AzureOpenAI object at 0x7f2dc44daa70>\n"
      ]
     }
    ],
    "source": [
     "import common\n",
+    "import time\n",
+    "\n",
+    "## Get an OpenAI client\n",
     "client = common.get_openai_client()\n",
     "\n",
     "print(client)"
@@ -42,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,16 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Thread(id='thread_wEEkhDtTWJOwmb63SQEb8IgA', created_at=1705033553, metadata={}, object='thread')"
+       "Thread(id='thread_7uuXppNB4DHMXHcaKvqM58V7', created_at=1705034029, metadata={}, object='thread')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,16 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ThreadMessage(id='msg_sJxIPugIIRgkKE2KQCmokreM', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='I need to solve the equation `3x + 11 = 14`. Can you help me?'), type='text')], created_at=1705033554, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_wEEkhDtTWJOwmb63SQEb8IgA')"
+       "ThreadMessage(id='msg_8Xr1cBquuO59RgL1NlFBCkRZ', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='I need to solve the equation `3x + 11 = 14`. Can you help me?'), type='text')], created_at=1705034032, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_7uuXppNB4DHMXHcaKvqM58V7')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,26 +146,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Run(id='run_SzQXm4lGtaQqj7ZeUwYFVLKY', assistant_id='asst_hYxH4avXjvyst98J89Yq4IQ3', cancelled_at=None, completed_at=None, created_at=1705033554, expires_at=1705034154, failed_at=None, file_ids=[], instructions='Please address the user as Jane Doe. The user has a premium account.', last_error=None, metadata={}, model='gpt-4-turbo-test', object='thread.run', required_action=None, started_at=None, status='queued', thread_id='thread_wEEkhDtTWJOwmb63SQEb8IgA', tools=[ToolAssistantToolsCode(type='code_interpreter')])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "run = client.beta.threads.runs.retrieve(\n",
-    "  thread_id=thread.id,\n",
-    "  run_id=run.id\n",
-    ")\n",
-    "run"
+    "while True:\n",
+    "  run = client.beta.threads.runs.retrieve(\n",
+    "    thread_id=thread.id,\n",
+    "    run_id=run.id\n",
+    "  )\n",
+    "  if run.status == \"completed\":\n",
+    "    break\n",
+    "  time.sleep(1)"
    ]
   },
   {
@@ -174,13 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "assistant The solution to the equation \\(3x + 11 = 14\\) is \\(x = 1\\).\n",
       "user I need to solve the equation `3x + 11 = 14`. Can you help me?\n"
      ]
     }
@@ -206,13 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Assistant(id='asst_9F6ZsUPuVUEszLTtWZmbMe2X', created_at=1705033848, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_hYxH4avXjvyst98J89Yq4IQ3', created_at=1705033553, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_vjEEATln0nSomn1VzE8y8P4a', created_at=1705033018, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_PAWDmOO0941frce6sZQdTaE7', created_at=1705031991, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
@@ -231,8 +228,7 @@
       "Assistant(id='asst_XLekKlheqC2czp1zGS23i1on', created_at=1705029753, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
       "Assistant(id='asst_zlSf0ZdZRwcC6zZT8W0Z1Pvm', created_at=1705029541, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
       "Assistant(id='asst_ICOmT0mj1JaZc6vnsJAQhLX3', created_at=1705029540, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
-      "Assistant(id='asst_QUIPvivr2bEJQXnH6syPrRbL', created_at=1705029113, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
-      "Assistant(id='asst_KaQ4c0rUro7iGWHthQcpOp72', created_at=1705018845, description=None, file_ids=[], instructions='You are a personal math tutor. When asked a question, write and run Python code to answer the question.', metadata={}, model='assistants-test-1', name='AIRT Math Tutor', object='assistant', tools=[])\n"
+      "Assistant(id='asst_QUIPvivr2bEJQXnH6syPrRbL', created_at=1705029113, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n"
      ]
     }
    ],
