Added the refence link.

--- a/notebooks/assistant-01.ipynb
+++ b/notebooks/assistant-01.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Assistant-01\n",
     "\n",
-    "## The OpenAI reference demo\n",
+    "### The OpenAI reference demo\n",
+    "\n",
+    "https://platform.openai.com/docs/assistants/overview\n",
     "\n",
     "### Get an OpenAI client"
    ]
