Added more descriptive comments.

--- a/notebooks/assistant-01.ipynb
+++ b/notebooks/assistant-01.ipynb
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<openai.lib.azure.AzureOpenAI object at 0x7f2dc44daa70>\n"
+      "<openai.lib.azure.AzureOpenAI object at 0x7f2d7d798eb0>\n"
      ]
     }
    ],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,21 +63,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a thread"
+    "### Create an assistant thread"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Thread(id='thread_7uuXppNB4DHMXHcaKvqM58V7', created_at=1705034029, metadata={}, object='thread')"
+       "Thread(id='thread_ISU5jFJBcWDJxDyJPA3n4th1', created_at=1705034668, metadata={}, object='thread')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,21 +91,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a user message"
+    "### Create a user message in the assistant thread"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ThreadMessage(id='msg_8Xr1cBquuO59RgL1NlFBCkRZ', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='I need to solve the equation `3x + 11 = 14`. Can you help me?'), type='text')], created_at=1705034032, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_7uuXppNB4DHMXHcaKvqM58V7')"
+       "ThreadMessage(id='msg_0LrmkwjbzwbIu8QuSEDBBrjc', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='I need to solve the equation `3x + 11 = 14`. Can you help me?'), type='text')], created_at=1705034668, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_ISU5jFJBcWDJxDyJPA3n4th1')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,12 +123,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run the assistant in a thread"
+    "## Run the assistant in the assistant thread"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,12 +143,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Retrieve the run"
+    "### Wait until the run is completed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,12 +166,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get and print the messages"
+    "### Get the messages for the thread and print them"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -179,6 +179,12 @@
      "output_type": "stream",
      "text": [
       "assistant The solution to the equation \\(3x + 11 = 14\\) is \\(x = 1\\).\n",
+      "assistant Certainly! To solve the equation \\(3x + 11 = 14\\), you need to isolate the variable \\(x\\) on one side of the equation. Here are the steps to do that:\n",
+      "\n",
+      "1. Subtract 11 from both sides of the equation to get \\(3x\\) by itself on the left side.\n",
+      "2. Divide both sides by 3 to solve for \\(x\\).\n",
+      "\n",
+      "Let me do the math for you:\n",
       "user I need to solve the equation `3x + 11 = 14`. Can you help me?\n"
      ]
     }
@@ -204,13 +210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Assistant(id='asst_dH8MRTuqwplfRBEDrnLJLjre', created_at=1705034667, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
+      "Assistant(id='asst_iZxyZmci2o3WqxE7oDSwALpF', created_at=1705034026, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_9F6ZsUPuVUEszLTtWZmbMe2X', created_at=1705033848, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_hYxH4avXjvyst98J89Yq4IQ3', created_at=1705033553, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_vjEEATln0nSomn1VzE8y8P4a', created_at=1705033018, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
@@ -228,9 +236,7 @@
       "Assistant(id='asst_9y3C0F7h0TgDxJlePLmNZKCj', created_at=1705029954, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
       "Assistant(id='asst_J5wz2Dq3kt1hf55AT75g08Qm', created_at=1705029823, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
       "Assistant(id='asst_XLekKlheqC2czp1zGS23i1on', created_at=1705029753, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
-      "Assistant(id='asst_zlSf0ZdZRwcC6zZT8W0Z1Pvm', created_at=1705029541, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
-      "Assistant(id='asst_ICOmT0mj1JaZc6vnsJAQhLX3', created_at=1705029540, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
-      "Assistant(id='asst_QUIPvivr2bEJQXnH6syPrRbL', created_at=1705029113, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n"
+      "Assistant(id='asst_zlSf0ZdZRwcC6zZT8W0Z1Pvm', created_at=1705029541, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n"
      ]
     }
    ],
