--- a/notebooks/assistant-01.ipynb
+++ b/notebooks/assistant-01.ipynb
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<openai.lib.azure.AzureOpenAI object at 0x7f2d7d798eb0>\n"
+      "<openai.lib.azure.AzureOpenAI object at 0x7f58bae38670>\n"
      ]
     }
    ],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,8 @@
     "    instructions=\"You are a personal math tutor. Write and run code to answer math questions.\",\n",
     "    tools=[{\"type\": \"code_interpreter\"}],\n",
     "    model=\"gpt-4-turbo-test\"\n",
-    ")"
+    ")\n",
+    "assistant_id = assistant.id"
    ]
   },
   {
@@ -68,23 +69,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Thread(id='thread_ISU5jFJBcWDJxDyJPA3n4th1', created_at=1705034668, metadata={}, object='thread')"
+       "'thread_4Hc1cWIDv2ntutiKGFqVmlZl'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "thread = client.beta.threads.create()\n",
-    "thread"
+    "thread_id = thread.id\n",
+    "thread_id"
    ]
   },
   {
@@ -96,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ThreadMessage(id='msg_0LrmkwjbzwbIu8QuSEDBBrjc', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='I need to solve the equation `3x + 11 = 14`. Can you help me?'), type='text')], created_at=1705034668, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_ISU5jFJBcWDJxDyJPA3n4th1')"
+       "ThreadMessage(id='msg_jDpHycRsSw5SvKfrnPqfie33', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='I need to solve the equation `3x + 11 = 14`. Can you help me?'), type='text')], created_at=1705035007, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_4Hc1cWIDv2ntutiKGFqVmlZl')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -179,12 +181,6 @@
      "output_type": "stream",
      "text": [
       "assistant The solution to the equation \\(3x + 11 = 14\\) is \\(x = 1\\).\n",
-      "assistant Certainly! To solve the equation \\(3x + 11 = 14\\), you need to isolate the variable \\(x\\) on one side of the equation. Here are the steps to do that:\n",
-      "\n",
-      "1. Subtract 11 from both sides of the equation to get \\(3x\\) by itself on the left side.\n",
-      "2. Divide both sides by 3 to solve for \\(x\\).\n",
-      "\n",
-      "Let me do the math for you:\n",
       "user I need to solve the equation `3x + 11 = 14`. Can you help me?\n"
      ]
     }
@@ -210,13 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Assistant(id='asst_x0dByYj3yQJe3YVXzZumhHC9', created_at=1705035006, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_dH8MRTuqwplfRBEDrnLJLjre', created_at=1705034667, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_iZxyZmci2o3WqxE7oDSwALpF', created_at=1705034026, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_9F6ZsUPuVUEszLTtWZmbMe2X', created_at=1705033848, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
@@ -235,8 +232,7 @@
       "Assistant(id='asst_Vug6WKjboOlCWyJiro3YTJho', created_at=1705029989, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
       "Assistant(id='asst_9y3C0F7h0TgDxJlePLmNZKCj', created_at=1705029954, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
       "Assistant(id='asst_J5wz2Dq3kt1hf55AT75g08Qm', created_at=1705029823, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
-      "Assistant(id='asst_XLekKlheqC2czp1zGS23i1on', created_at=1705029753, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
-      "Assistant(id='asst_zlSf0ZdZRwcC6zZT8W0Z1Pvm', created_at=1705029541, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n"
+      "Assistant(id='asst_XLekKlheqC2czp1zGS23i1on', created_at=1705029753, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n"
      ]
     }
    ],
@@ -245,6 +241,35 @@
     "assistants = client.beta.assistants.list()\n",
     "for assistant in assistants.data:\n",
     "    print(assistant)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clean the assistant and the thread"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ThreadDeleted(id='thread_4Hc1cWIDv2ntutiKGFqVmlZl', deleted=True, object='thread.deleted')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.beta.assistants.delete(assistant_id=assistant_id)\n",
+    "\n",
+    "client.beta.threads.delete(thread_id=thread_id)"
    ]
   }
  ],
