--- a/notebooks/assistant-01.ipynb
+++ b/notebooks/assistant-01.ipynb
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Clean the assistant and the thread"
+    "### Cleanup: clean the assistant and the thread thread"
    ]
   },
   {
