--- a/notebooks/assistant-01.ipynb
+++ b/notebooks/assistant-01.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "https://platform.openai.com/docs/assistants/overview\n",
     "\n",
-    "### Get an OpenAI client"
+    "### Get an OpenAI client\n",
+    "\n",
+    "**Note:** When configuring the OpenAI client, the API version, the model version, and endpoint are \"new\"."
    ]
   },
   {
@@ -40,8 +42,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note:** The API version, the model version, and endpoint matter.\n",
-    "\n",
     "### Create an assistant"
    ]
   },
