--- a/notebooks/assistant-01.ipynb
+++ b/notebooks/assistant-01.ipynb
@@ -19,23 +19,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<openai.lib.azure.AzureOpenAI object at 0x7f58bae38670>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import common\n",
     "import time\n",
     "\n",
     "## Get an OpenAI client\n",
-    "client = common.get_openai_client()\n",
-    "\n",
-    "print(client)"
+    "client = common.get_openai_client()"
    ]
   },
   {
@@ -75,7 +65,7 @@
     {
      "data": {
       "text/plain": [
-       "'thread_4Hc1cWIDv2ntutiKGFqVmlZl'"
+       "'thread_pKyOd8o2eJFRz4SfysqRJBbv'"
       ]
      },
      "execution_count": 3,
@@ -104,7 +94,7 @@
     {
      "data": {
       "text/plain": [
-       "ThreadMessage(id='msg_jDpHycRsSw5SvKfrnPqfie33', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='I need to solve the equation `3x + 11 = 14`. Can you help me?'), type='text')], created_at=1705035007, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_4Hc1cWIDv2ntutiKGFqVmlZl')"
+       "ThreadMessage(id='msg_tFBStpr139kLwArJdb88EvCl', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='I need to solve the equation `3x + 11 = 14`. Can you help me?'), type='text')], created_at=1705035659, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_pKyOd8o2eJFRz4SfysqRJBbv')"
       ]
      },
      "execution_count": 4,
@@ -161,6 +151,7 @@
     "  )\n",
     "  if run.status == \"completed\":\n",
     "    break\n",
+    "  # TODO: Is this best practice?\n",
     "  time.sleep(1)"
    ]
   },
@@ -180,7 +171,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "assistant The solution to the equation \\(3x + 11 = 14\\) is \\(x = 1\\).\n",
+      "assistant To solve the equation \\(3x + 11 = 14\\), we can rearrange the terms to isolate \\(x\\):\n",
+      "\n",
+      "\\[\n",
+      "3x = 14 - 11\n",
+      "\\]\n",
+      "\\[\n",
+      "3x = 3\n",
+      "\\]\n",
+      "\\[\n",
+      "x = \\frac{3}{3}\n",
+      "\\]\n",
+      "\\[\n",
+      "x = 1\n",
+      "\\]\n",
+      "\n",
+      "So, the solution to the equation is \\(x = 1\\). If you have any more questions or need further assistance, feel free to ask!\n",
       "user I need to solve the equation `3x + 11 = 14`. Can you help me?\n"
      ]
     }
@@ -194,7 +200,9 @@
     "  content = msg.content\n",
     "  for line in content:\n",
     "    txt = line.text\n",
-    "    print(msg.role,txt.value)"
+    "    # TODO: Is there a better way to do this? Should it be sorted by date?\n",
+    "    print(msg.role,txt.value)\n",
+    "  "
    ]
   },
   {
@@ -213,7 +221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assistant(id='asst_x0dByYj3yQJe3YVXzZumhHC9', created_at=1705035006, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
+      "Assistant(id='asst_nmVH9gWfbCACxxtM8H2U7zWI', created_at=1705035658, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_dH8MRTuqwplfRBEDrnLJLjre', created_at=1705034667, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_iZxyZmci2o3WqxE7oDSwALpF', created_at=1705034026, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_9F6ZsUPuVUEszLTtWZmbMe2X', created_at=1705033848, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
@@ -240,7 +248,10 @@
     "# List the registered assistants\n",
     "assistants = client.beta.assistants.list()\n",
     "for assistant in assistants.data:\n",
-    "    print(assistant)\n"
+    "    print(assistant)\n",
+    "\n",
+    "# TODO: Do the assistans in the model and the threads, that have are not not disposed\n",
+    "# have a time limit or does there have to be a cleanup?\n"
    ]
   },
   {
@@ -258,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "ThreadDeleted(id='thread_4Hc1cWIDv2ntutiKGFqVmlZl', deleted=True, object='thread.deleted')"
+       "ThreadDeleted(id='thread_pKyOd8o2eJFRz4SfysqRJBbv', deleted=True, object='thread.deleted')"
       ]
      },
      "execution_count": 9,
@@ -267,8 +278,10 @@
     }
    ],
    "source": [
+    "# TODO: Should the assisntant live for the life of the application?\n",
     "client.beta.assistants.delete(assistant_id=assistant_id)\n",
     "\n",
+    "# TODO: Should the thread live for the life of the execution?\n",
     "client.beta.threads.delete(thread_id=thread_id)"
    ]
   }
