--- a/notebooks/assistant-01.ipynb
+++ b/notebooks/assistant-01.ipynb
@@ -4,11 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assistant-01\n",
+    "# Assistant-01<br/>The OpenAI reference demo\n",
     "\n",
-    "### The OpenAI reference demo\n",
-    "\n",
-    "https://platform.openai.com/docs/assistants/overview\n",
+    "Reference:\n",
+    "- https://platform.openai.com/docs/assistants/overview\n",
     "\n",
     "### Get an OpenAI client\n",
     "\n",
