--- a/notebooks/assistant-01.ipynb
+++ b/notebooks/assistant-01.ipynb
@@ -64,7 +64,7 @@
     {
      "data": {
       "text/plain": [
-       "'thread_pKyOd8o2eJFRz4SfysqRJBbv'"
+       "'thread_ljUHlwa6ExOY1lubXKKrkZ0E'"
       ]
      },
      "execution_count": 3,
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "ThreadMessage(id='msg_tFBStpr139kLwArJdb88EvCl', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='I need to solve the equation `3x + 11 = 14`. Can you help me?'), type='text')], created_at=1705035659, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_pKyOd8o2eJFRz4SfysqRJBbv')"
+       "ThreadMessage(id='msg_gXZ0ZmYHDqiQZrl5Db8lB0fe', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='What is the 1001st prime number. Can you help me?'), type='text')], created_at=1705036315, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_ljUHlwa6ExOY1lubXKKrkZ0E')"
       ]
      },
      "execution_count": 4,
@@ -105,7 +105,8 @@
     "message = client.beta.threads.messages.create(\n",
     "    thread_id=thread.id,\n",
     "    role=\"user\",\n",
-    "    content=\"I need to solve the equation `3x + 11 = 14`. Can you help me?\"\n",
+    "    #content=\"I need to solve the equation `3x + 11 = 14`. Can you help me?\"\n",
+    "    content=\"What is the 1001st prime number. Can you help me?\"\n",
     ")\n",
     "message"
    ]
@@ -150,7 +151,7 @@
     "  )\n",
     "  if run.status == \"completed\":\n",
     "    break\n",
-    "  # TODO: Is this best practice?\n",
+    "  # TODO: Is it best practice to wait till completed?\n",
     "  time.sleep(1)"
    ]
   },
@@ -170,23 +171,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "assistant To solve the equation \\(3x + 11 = 14\\), we can rearrange the terms to isolate \\(x\\):\n",
-      "\n",
-      "\\[\n",
-      "3x = 14 - 11\n",
-      "\\]\n",
-      "\\[\n",
-      "3x = 3\n",
-      "\\]\n",
-      "\\[\n",
-      "x = \\frac{3}{3}\n",
-      "\\]\n",
-      "\\[\n",
-      "x = 1\n",
-      "\\]\n",
-      "\n",
-      "So, the solution to the equation is \\(x = 1\\). If you have any more questions or need further assistance, feel free to ask!\n",
-      "user I need to solve the equation `3x + 11 = 14`. Can you help me?\n"
+      "assistant The \\(1001^{st}\\) prime number is 7927.\n",
+      "user What is the 1001st prime number. Can you help me?\n"
      ]
     }
    ],
@@ -220,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assistant(id='asst_nmVH9gWfbCACxxtM8H2U7zWI', created_at=1705035658, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
+      "Assistant(id='asst_KKNQkpTA9N20A1clywX6vID8', created_at=1705036314, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_dH8MRTuqwplfRBEDrnLJLjre', created_at=1705034667, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_iZxyZmci2o3WqxE7oDSwALpF', created_at=1705034026, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_9F6ZsUPuVUEszLTtWZmbMe2X', created_at=1705033848, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
@@ -268,7 +254,7 @@
     {
      "data": {
       "text/plain": [
-       "ThreadDeleted(id='thread_pKyOd8o2eJFRz4SfysqRJBbv', deleted=True, object='thread.deleted')"
+       "ThreadDeleted(id='thread_ljUHlwa6ExOY1lubXKKrkZ0E', deleted=True, object='thread.deleted')"
       ]
      },
      "execution_count": 9,
@@ -277,11 +263,13 @@
     }
    ],
    "source": [
-    "# TODO: Should the assisntant live for the life of the application?\n",
-    "client.beta.assistants.delete(assistant_id=assistant_id)\n",
+    "# TODO: Should the assistant live for the life of the application?\n",
+    "assistant_status = client.beta.assistants.delete(assistant_id=assistant_id)\n",
+    "print(assistant_status.deleted)\n",
     "\n",
     "# TODO: Should the thread live for the life of the execution?\n",
-    "client.beta.threads.delete(thread_id=thread_id)"
+    "thread_status = client.beta.threads.delete(thread_id=thread_id)\n",
+    "print(thread_status.deleted)"
    ]
   }
  ],
