Added variables to cleanup

--- a/notebooks/assistant-01.ipynb
+++ b/notebooks/assistant-01.ipynb
@@ -64,7 +64,7 @@
     {
      "data": {
       "text/plain": [
-       "'thread_ljUHlwa6ExOY1lubXKKrkZ0E'"
+       "'thread_XthxmeOyr3kyKnIQy60UBDuu'"
       ]
      },
      "execution_count": 3,
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "ThreadMessage(id='msg_gXZ0ZmYHDqiQZrl5Db8lB0fe', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='What is the 1001st prime number. Can you help me?'), type='text')], created_at=1705036315, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_ljUHlwa6ExOY1lubXKKrkZ0E')"
+       "ThreadMessage(id='msg_54X2wLscdkd2kMthue1RIYJz', assistant_id=None, content=[MessageContentText(text=Text(annotations=[], value='What is the 1001st prime number. Can you help me?'), type='text')], created_at=1705036735, file_ids=[], metadata={}, object='thread.message', role='user', run_id=None, thread_id='thread_XthxmeOyr3kyKnIQy60UBDuu')"
       ]
      },
      "execution_count": 4,
@@ -171,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "assistant The \\(1001^{st}\\) prime number is 7927.\n",
+      "assistant The 1001st prime number is 7927. If you need further assistance or have more questions, feel free to ask!\n",
       "user What is the 1001st prime number. Can you help me?\n"
      ]
     }
@@ -206,7 +206,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assistant(id='asst_KKNQkpTA9N20A1clywX6vID8', created_at=1705036314, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
+      "Assistant(id='asst_XPTyNaMVp4OIAmjWmOgOBRDa', created_at=1705036734, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
+      "Assistant(id='asst_mCyXW0nbZ4H4TFM6Yt46D0nd', created_at=1705036469, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_dH8MRTuqwplfRBEDrnLJLjre', created_at=1705034667, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_iZxyZmci2o3WqxE7oDSwALpF', created_at=1705034026, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
       "Assistant(id='asst_9F6ZsUPuVUEszLTtWZmbMe2X', created_at=1705033848, description=None, file_ids=[], instructions='You are a personal math tutor. Write and run code to answer math questions.', metadata={}, model='gpt-4-turbo-test', name='Math Tutor', object='assistant', tools=[ToolCodeInterpreter(type='code_interpreter')])\n",
@@ -224,8 +225,7 @@
       "Assistant(id='asst_mbV2iQ0EleycNSOpYRQFEfRa', created_at=1705030064, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
       "Assistant(id='asst_Vug6WKjboOlCWyJiro3YTJho', created_at=1705029989, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
       "Assistant(id='asst_9y3C0F7h0TgDxJlePLmNZKCj', created_at=1705029954, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
-      "Assistant(id='asst_J5wz2Dq3kt1hf55AT75g08Qm', created_at=1705029823, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n",
-      "Assistant(id='asst_XLekKlheqC2czp1zGS23i1on', created_at=1705029753, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n"
+      "Assistant(id='asst_J5wz2Dq3kt1hf55AT75g08Qm', created_at=1705029823, description=None, file_ids=[], instructions='You are an AI model that empowers every person and every organization on the planet to achieve more.', metadata={}, model='gpt-4-turbo-test', name=None, object='assistant', tools=[])\n"
      ]
     }
    ],
@@ -252,14 +252,12 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "ThreadDeleted(id='thread_ljUHlwa6ExOY1lubXKKrkZ0E', deleted=True, object='thread.deleted')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
     }
    ],
    "source": [
