Updated the comments

--- a/notebooks/assistant-02-framework.ipynb
+++ b/notebooks/assistant-02-framework.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Assistant-02<br/>Assistant Framework\n",
     "\n",
+    "This notebook showcases a foundation framework to work with Assistants.\n",
+    "\n",
     "### Get an OpenAI client and an Assistant\n",
     "\n",
     "**Note:** When configuring the OpenAI client, the API version, the model version, and endpoint are \"new\"."
