Updated the comments.

--- a/notebooks/assistant-02-framework.ipynb
+++ b/notebooks/assistant-02-framework.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Assistant-02<br/>Assistant Framework\n",
     "\n",
-    "This notebook showcases a foundation framework to work with Assistants.\n",
+    "This notebook showcases a foundational framework to work with Assistants.\n",
     "\n",
     "### Get an OpenAI client and an Assistant\n",
     "\n",
