--- a/notebooks/assistant-02-framework.ipynb
+++ b/notebooks/assistant-02-framework.ipynb
@@ -33,12 +33,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run user messages against the assistant"
+    "## Test messages and recall the threads across users"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,45 +49,38 @@
       "Generated message: 2 + 2 equals 4.\n",
       "To John: 2 + 2 equals 4.\n",
       "Retrieving existing thread for Sarah with wa_id 456\n",
-      "Generated message: The expression \\( x \\times x \\) is equivalent to \\( x^2 \\), which is the square of the variable \\( x \\).\n",
-      "To Sarah: The expression \\( x \\times x \\) is equivalent to \\( x^2 \\), which is the square of the variable \\( x \\).\n",
+      "Generated message: The expression \\( x \\times x \\) is mathematically equal to \\( x^2 \\), which is the square of \\( x \\).\n",
+      "To Sarah: The expression \\( x \\times x \\) is mathematically equal to \\( x^2 \\), which is the square of \\( x \\).\n",
       "Retrieving existing thread for John with wa_id 123\n",
-      "Generated message: Given \\( y = 2 \\) and \\( m = -10 \\), we can substitute these values into the equation \\( x = m \\times y + 5 \\) to find the value of \\( x \\).\n",
+      "Generated message: Given \\( y = 2 \\) and \\( m = -10 \\), we can substitute these values into the equation \\( x = m \\cdot y + 5 \\):\n",
       "\n",
-      "Let's do the calculation:\n",
-      "\n",
-      "\\[ x = -10 \\times 2 + 5 \\]\n",
+      "\\[ x = (-10) \\cdot 2 + 5 \\]\n",
       "\\[ x = -20 + 5 \\]\n",
       "\\[ x = -15 \\]\n",
       "\n",
       "The value of \\( x \\) is \\( -15 \\).\n",
-      "To John: Given \\( y = 2 \\) and \\( m = -10 \\), we can substitute these values into the equation \\( x = m \\times y + 5 \\) to find the value of \\( x \\).\n",
+      "To John: Given \\( y = 2 \\) and \\( m = -10 \\), we can substitute these values into the equation \\( x = m \\cdot y + 5 \\):\n",
       "\n",
-      "Let's do the calculation:\n",
-      "\n",
-      "\\[ x = -10 \\times 2 + 5 \\]\n",
+      "\\[ x = (-10) \\cdot 2 + 5 \\]\n",
       "\\[ x = -20 + 5 \\]\n",
       "\\[ x = -15 \\]\n",
       "\n",
       "The value of \\( x \\) is \\( -15 \\).\n",
       "Retrieving existing thread for Sarah with wa_id 456\n",
-      "Generated message: If \\( x = 2 \\), then the value of \\( y \\), for \\( y = x \\times x \\), is calculated by substituting 2 for \\( x \\):\n",
+      "Generated message: If \\( x = 2 \\), then the value of \\( y \\) for \\( y = x \\times x \\) would be:\n",
       "\n",
       "\\( y = 2 \\times 2 = 4 \\)\n",
       "\n",
-      "Therefore, the value of \\( y \\) is 4.\n",
-      "To Sarah: If \\( x = 2 \\), then the value of \\( y \\), for \\( y = x \\times x \\), is calculated by substituting 2 for \\( x \\):\n",
+      "So, if \\( x = 2 \\), then \\( y = 4 \\).\n",
+      "To Sarah: If \\( x = 2 \\), then the value of \\( y \\) for \\( y = x \\times x \\) would be:\n",
       "\n",
       "\\( y = 2 \\times 2 = 4 \\)\n",
       "\n",
-      "Therefore, the value of \\( y \\) is 4.\n"
+      "So, if \\( x = 2 \\), then \\( y = 4 \\).\n"
      ]
     }
    ],
    "source": [
-    "# --------------------------------------------------------------\n",
-    "# Test assistant\n",
-    "# --------------------------------------------------------------\n",
     "new_message = framework.generate_response(client,assistant,\"What's 2+2\", \"123\", \"John\")\n",
     "\n",
     "new_message = framework.generate_response(client,assistant,\"What's x*x?\", \"456\", \"Sarah\")\n",
